--- a/src/index.html
+++ b/src/index.html
@@ -24,10 +24,13 @@
       </header>
       <main class="content">
         <section class="profile page__section">
-          <div
-            class="profile__image"
-            style="background-image: url(<%=require('./images/avatar.jpg')%>)"
-          ></div>
+          <div class="profile__image_container">
+            <div class="profile__image_overlay"></div>
+            <div
+              class="profile__image"
+              style="background-image: url(<%=require('./images/avatar.jpg')%>)"
+            ></div>
+          </div>
           <div class="profile__info">
             <h1 class="profile__title">Жак-Ив Кусто</h1>
             <button
@@ -62,17 +65,29 @@
             <input
               type="text"
               name="name"
+              id="name-input"
+              minlength="2"
+              maxlength="40"
+              pattern="^[a-zA-Zа-яА-Я\s\-]+$"
+              data-error-message="Разрешены только латинские и кириллические буквы, знаки дефиса и пробелы"
               class="popup__input popup__input_type_name"
               placeholder="Имя"
               required
             />
+            <span class="popup__input-error name-input-error"></span>
             <input
               type="text"
               name="description"
+              id="description-input"
+              minlength="2"
+              maxlength="200"
+              pattern="^[a-zA-Zа-яА-Я\s\-]+$"
+              data-error-message="Разрешены только латинские и кириллические буквы, знаки дефиса и пробелы"
               class="popup__input popup__input_type_description"
               placeholder="Занятие"
               required
             />
+            <span class="popup__input-error description-input-error"></span>
             <button
               type="submit"
               class="button popup__button"
@@ -99,14 +114,22 @@
               class="popup__input popup__input_type_card-name"
               placeholder="Название"
               required
+              id="card-name-input"
+              minlength="2"
+              maxlength="30"
+              pattern="^[a-zA-Zа-яА-Я\sёЁ\-]+$"
+              data-error-message="Разрешены только латинские и кириллические буквы, знаки дефиса и пробелы."
             />
+            <span class="popup__input-error card-name-input-error"></span>
             <input
               type="url"
               name="link"
               class="popup__input popup__input_type_url"
               placeholder="Ссылка на картинку"
+              id="url-input"
               required
             />
+            <span class="popup__input-error url-input-error"></span>
             <button
               type="submit"
               class="button popup__button"
@@ -130,6 +153,36 @@
           <p class="popup__caption"></p>
         </div>
       </div>
+      <div class="popup popup_avatar">
+        <div class="popup__content popup__content_avatar">
+          <button
+            type="button"
+            class="popup__close"
+          ></button>
+          <h3 class="popup__title">Обновить аватар</h3>
+          <form
+            class="popup__form"
+            name="avatar_update"
+            novalidate
+          >
+            <input
+              type="url"
+              name="link"
+              class="popup__input popup__input_type_url"
+              id="type_url-input"
+              placeholder="Ссылка на картинку"
+              required
+            />
+            <span class="popup__input-error type_url-input-error"></span>
+            <button
+              type="submit"
+              class="button popup__button"
+            >
+              Сохранить
+            </button>
+          </form>
+        </div>
+      </div>
     </div>
     <!--<script src="./scripts/cards.js"></script>
 <script src="./scripts/index.js" defer></script>-->
@@ -147,10 +200,13 @@
         ></button>
         <div class="card__description">
           <h2 class="card__title"></h2>
-          <button
-            type="button"
-            class="card__like-button"
-          ></button>
+          <div class="card__like-container">
+            <button
+              type="button"
+              class="card__like-button"
+            ></button>
+            <span class="card__like-count">0</span>
+          </div>
         </div>
       </li>
     </template>
